feat : Seat 인증인가 설정 refactor : Seat 에러 관리방식 수정