@@ -1,5 +1,7 @@
 package com.example.saurus.domain.seat.service;
 
+import com.example.saurus.domain.common.dto.AuthUser;
+import com.example.saurus.domain.common.exception.CustomException;
 import com.example.saurus.domain.seat.dto.request.SeatCreateRequest;
 import com.example.saurus.domain.seat.dto.request.SeatUpdateRequest;
 import com.example.saurus.domain.seat.dto.response.SeatResponse;
@@ -13,6 +15,7 @@ import static java.util.stream.Collectors.toList;
 
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -33,33 +36,40 @@ public class SeatServiceImpl implements SeatService {
 
     @Override
     @Transactional
-    public SeatResponse createSeat(Long sectionId, SeatCreateRequest request) {
+    public SeatResponse createSeat(AuthUser authUser, Long sectionId, SeatCreateRequest request) {
+        checkAdmin(authUser);
+
         Section section = sectionRepository.findById(sectionId)
                 .filter(s -> s.getDeletedAt() == null)
-                .orElseThrow(() -> new EntityNotFoundException("해당 Section이 존재하지 않거나 삭제되었습니다."));
+                .orElseThrow(() -> new CustomException(HttpStatus.NOT_FOUND, "해당 Section이 존재하지 않거나 삭제되었습니다."));
 
-        if (seatRepository.existsBySectionIdAndSeatRowAndNumberAndDeletedAtIsNull(
-                sectionId, request.getSeatRow(), request.getNumber().toString())) {
-            throw new IllegalArgumentException("해당 좌석은 이미 존재합니다.");
+        boolean exists = seatRepository.existsBySectionIdAndSeatRowAndNumberAndDeletedAtIsNull(
+                sectionId, request.getSeatRow(), request.getNumber().toString()
+        );
+        if (exists) {
+            throw new CustomException(HttpStatus.CONFLICT, "해당 좌석은 이미 존재합니다.");
         }
 
         Seat seat = SeatMapper.toEntity(section, request);
-        seat.setSection(section); // 연관관계 설정
         seat = seatRepository.save(seat);
         return SeatMapper.toResponse(seat);
     }
 
     @Override
     @Transactional
-    public SeatResponse updateSeat(Long seatId, SeatUpdateRequest request) {
+    public SeatResponse updateSeat(AuthUser authUser, Long seatId, SeatUpdateRequest request) {
+        checkAdmin(authUser);
+
         Seat seat = getActiveSeat(seatId);
-        seat.update(request.getRow(), request.getNumber().toString(), request.getSeatType());
+        seat.update(request.getSeatRow(), request.getNumber().toString(), request.getSeatType());
         return SeatMapper.toResponse(seat);
     }
 
     @Override
     @Transactional
-    public void deleteSeat(Long seatId) {
+    public void deleteSeat(AuthUser authUser, Long seatId) {
+        checkAdmin(authUser);
+
         Seat seat = getActiveSeat(seatId);
         seat.delete();
     }
@@ -68,7 +78,7 @@ public class SeatServiceImpl implements SeatService {
     public List<SeatResponse> getSeatsBySectionId(Long sectionId) {
         return seatRepository.findBySectionIdAndDeletedAtIsNull(sectionId).stream()
                 .map(SeatMapper::toResponse)
-                .collect(toList());
+                .toList();
     }
 
     @Override
@@ -78,6 +88,12 @@ public class SeatServiceImpl implements SeatService {
 
     private Seat getActiveSeat(Long seatId) {
         return seatRepository.findByIdAndDeletedAtIsNull(seatId)
-                .orElseThrow(() -> new EntityNotFoundException("해당 Seat이 존재하지 않거나 삭제되었습니다."));
+                .orElseThrow(() -> new CustomException(HttpStatus.NOT_FOUND, "해당 Seat이 존재하지 않거나 삭제되었습니다."));
+    }
+
+    private void checkAdmin(AuthUser authUser) {
+        if (!authUser.getUserRole().name().equals("ADMIN")) {
+            throw new CustomException(HttpStatus.FORBIDDEN, "관리자만 수행할 수 있는 작업입니다.");
+        }
     }
 }
